# rustmote

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RUSTMOTE_SPEC.md
.github/workflows/: ci.yml  release.yml
GECK/: GECK_Inst.md  LLM_init.md  decisions.md  env.md  learnings.md  log.md  log_index.jsonl  tasks.md
GECK/decisions/: DECISION-001-adopt-spec-build-order.md  DECISION-002-bump-msrv-to-1.85.md
crates/rustmote-cli/: Cargo.toml
crates/rustmote-cli/src/: main.rs
crates/rustmote-cli/src/commands/: config.rs  connect.rs  mod.rs  relay.rs  server.rs  status.rs  target.rs
crates/rustmote-cli/tests/: cli.rs
crates/rustmote-core/: Cargo.toml
crates/rustmote-core/src/: config.rs  credentials.rs  discovery.rs  error.rs  lib.rs  registry.rs  registry_client.rs  relay_lifecycle.rs  session.rs  target.rs  viewer.rs
crates/rustmote-core/src/relay_lifecycle/: commands.rs  mod.rs  state.rs
crates/rustmote-core/src/session/: known_hosts.rs  mod.rs
crates/rustmote-core/tests/: config_roundtrip.rs  credential_modes.rs  discovery_localhost.rs  registry_client_cache.rs  relay_lifecycle_mock.rs  relay_rollback.rs  session_mock_transport.rs
docker/relay/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
