[workspace]
resolver = "2"
members = ["crates/rustmote-core", "crates/rustmote-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Charles Russell <crussella0129@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crussella0129/rustmote"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
keyring = "3"
directories = "5"
mdns-sd = "0.11"
surge-ping = "0.8"
pnet = "0.35"
ipnet = "2"
rpassword = "7"
comfy-table = "7"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
