[package]
name = "rustmote-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rustmote: registry, SSH session orchestration, credential handling, discovery, and RustDesk relay lifecycle management."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }
directories = { workspace = true }
mdns-sd = { workspace = true }
surge-ping = { workspace = true }
pnet = { workspace = true }
ipnet = { workspace = true }
rpassword = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
async-trait = { workspace = true }
